--- a/IntegrationTool.ProjectDesigner/FlowDesign/ToolboxMainflow.xaml
+++ b/IntegrationTool.ProjectDesigner/FlowDesign/ToolboxMainflow.xaml
@@ -6,7 +6,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <ScrollViewer x:Name="MainToolbox" VerticalScrollBarVisibility="Auto">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="36"/>
+            <RowDefinition Height="22"/>
+            <RowDefinition Height="259*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="38"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Margin="9,5,3,5" Background="{DynamicResource IconToolbox}" Grid.Column="1"  />
+        <Label Padding="2 0 0 0" VerticalAlignment="Center" Content="Toolbox" Style="{StaticResource SubTitle}" Grid.Column="3"  />
+        <ScrollViewer x:Name="MainToolbox" VerticalScrollBarVisibility="Auto" Grid.Row="2" Grid.ColumnSpan="4">
         </ScrollViewer>
     </Grid>
 </UserControl>
