--- a/IntegrationTool.Module.WriteDynamicCrmMarketingLists/UserControls/ListMappingJoin.xaml
+++ b/IntegrationTool.Module.WriteDynamicCrmMarketingLists/UserControls/ListMappingJoin.xaml
@@ -1,11 +1,14 @@
-﻿<UserControl x:Class="IntegrationTool.Module.WriteDynamicCrmMarketingLists.UserControls.ListMappingJoin"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:DataMappingControl="clr-namespace:IntegrationTool.DataMappingControl;assembly=IntegrationTool.DataMappingControl" x:Class="IntegrationTool.Module.WriteDynamicCrmMarketingLists.UserControls.ListMappingJoin" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+
+        <DataMappingControl:MappingControl x:Name="marketingListMapping"/>
+
     </Grid>
 </UserControl>
