--- a/IntegrationTool.Module.WriteDynamicCrmMarketingLists/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.WriteDynamicCrmMarketingLists/ConfigurationWindow.xaml
@@ -3,19 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="342" Width="822">
+             mc:Ignorable="d" d:DesignHeight="342" d:DesignWidth="822">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="160"/>
             <ColumnDefinition Width="10"/>
             <ColumnDefinition Width="160"/>
-            <ColumnDefinition Width="223*"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="160"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="160"/>
+            <ColumnDefinition Width="82*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="26"/>
             <RowDefinition Height="10"/>
-            <RowDefinition Height="26"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="0"/>
+            <RowDefinition Height="0"/>
             <RowDefinition Height="100*" x:Name="rowJoinType"/>
             <RowDefinition Height="10"/>
             <RowDefinition Height="26"/>
@@ -23,16 +27,16 @@
             <RowDefinition Height="100*"/>
         </Grid.RowDefinitions>
         <Label Content="Marketinglist Jointype:"/>
-        <ContentControl x:Name="ListMappingContent" Grid.Row="4"  Grid.ColumnSpan="4" />
+        <ContentControl x:Name="ListMappingContent" Grid.Row="4"  Grid.ColumnSpan="8" />
         <ComboBox x:Name="ddJoinType" Grid.Column="2" SelectedValue="{Binding Path=JoinList}" SelectedValuePath="Tag" SelectionChanged="ddJoinType_SelectionChanged" IsEnabled="False">
             <ComboBoxItem Content="Manual Marketinglistname" Tag="Manual" />
             <ComboBoxItem Content="Join Marketinglist" Tag="Join" />
         </ComboBox>
-        <Label Content="If join unsuccessful:" Grid.Row="2"/>
-        <ComboBox x:Name="ddJoinUnsuccessful" Grid.Column="2" Grid.Row="2" SelectedValue="{Binding Path=IfJoinUnsuccessful}" SelectedValuePath="Tag" IsEnabled="False" >
+        <Label Content="If join unsuccessful:" Grid.Column="4"/>
+        <ComboBox x:Name="ddJoinUnsuccessful" Grid.Column="6" SelectedValue="{Binding Path=IfJoinUnsuccessful}" SelectedValuePath="Tag" IsEnabled="False" >
             <ComboBoxItem Content="Create new marketinglist" Tag="CreateNew" />
             <ComboBoxItem Content="Fail" Tag="Fail" />
         </ComboBox>
-        <ContentControl x:Name="MemberMappingContent" Grid.Row="8"  Grid.ColumnSpan="4" />
+        <ContentControl x:Name="MemberMappingContent" Grid.Row="8"  Grid.ColumnSpan="8" />
     </Grid>
 </UserControl>
