--- a/IntegrationTool.Module.ConnectToDynamicsCrm/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.ConnectToDynamicsCrm/ConfigurationWindow.xaml
@@ -17,7 +17,12 @@
             <RowDefinition Height="27*"/>
             <RowDefinition Height="262*"/>
         </Grid.RowDefinitions>
-        <Label Content="Connectionstring" Grid.Row="1"/>
+        <Label Content="Connectionstring" Grid.Row="1" Grid.RowSpan="2"/>
         <TextBox Grid.Column="1" Text="{Binding Path=ConnectionString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="23" Grid.Row="1" VerticalAlignment="Top" />
+        <TextBlock Grid.Column="1"  Grid.Row="3">
+            <Hyperlink x:Name="btnCrmConnection" Click="btnCrmConnection_Click" >
+                Crm Connectionstrings
+            </Hyperlink>
+        </TextBlock>
     </Grid>
 </UserControl>
